MVC: ChoosePlayerScreen (view) now gets its data from the BoardGameApp (controller). The data is the players and the playing pieces